RESOLVED FIXED115432
REGRESSION(r140907): Incorrect baseline on cells after updating vertical-align
https://bugs.webkit.org/show_bug.cgi?id=115432
Summary REGRESSION(r140907): Incorrect baseline on cells after updating vertical-align
Robert Hogan
Reported 2013-04-30 11:08:20 PDT
Attachments
Reduction (1.12 KB, text/html)
2013-04-30 11:09 PDT, Robert Hogan
no flags
Patch (4.77 KB, patch)
2013-04-30 12:54 PDT, Robert Hogan
jchaffraix: review+
Robert Hogan
Comment 1 2013-04-30 11:09:28 PDT
Created attachment 200133 [details] Reduction
Robert Hogan
Comment 2 2013-04-30 12:54:10 PDT
Julien Chaffraix
Comment 3 2013-05-02 11:20:04 PDT
Comment on attachment 200142 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=200142&action=review > Source/WebCore/rendering/RenderTableCell.cpp:408 > + if (oldStyle && style()->verticalAlign() != oldStyle->verticalAlign()) Let's add a comment about why this is required.
Robert Hogan
Comment 4 2013-05-04 00:45:20 PDT
Note You need to log in before you can comment on or make changes to this bug.