REGRESSION(r140907): Incorrect baseline on cells after updating vertical-align https://bugs.webkit.org/show_bug.cgi?id=115432

Reviewed by Julien Chaffraix.

Source/WebCore:

If a cell changes vertical-align any intrinsic padding it has is now redundant. It
needs to calculate its new height from RenderTableRow::layout() and then find its
new intrinsic padding in RenderTableSection::layoutRows().

Test: fast/table/correct-baseline-after-style-change.html

* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::styleDidChange):

LayoutTests:

* fast/table/correct-baseline-after-style-change-expected.html: Added.
* fast/table/correct-baseline-after-style-change.html: Added.

Canonical link: https://commits.webkit.org/134018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149553 268f45cc-cd09-0410-ab3c-d52691b4dbfc